hemos cambiado todas las rutas a las relativas para que sea flexible

--- a/UEFA/modelos/Aprendizaje profundo/DNN.ipynb
+++ b/UEFA/modelos/Aprendizaje profundo/DNN.ipynb
@@ -35,107 +35,107 @@
       "\n",
       "WARNING:tensorflow:From c:\\Users\\albab\\anaconda3\\Lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
       "\n",
-      "46/46 [==============================] - 1s 1ms/step - loss: 0.6926 - accuracy: 0.5207\n",
+      "46/46 [==============================] - 1s 2ms/step - loss: 0.6937 - accuracy: 0.5251\n",
       "Epoch 2/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.6509 - accuracy: 0.6841\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.6594 - accuracy: 0.7233\n",
       "Epoch 3/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.5819 - accuracy: 0.7582\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.5930 - accuracy: 0.7647\n",
       "Epoch 4/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.4672 - accuracy: 0.8017\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.4852 - accuracy: 0.8214\n",
       "Epoch 5/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.3352 - accuracy: 0.8802\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.3529 - accuracy: 0.8758\n",
       "Epoch 6/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.2079 - accuracy: 0.9434\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.2451 - accuracy: 0.9216\n",
       "Epoch 7/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.1322 - accuracy: 0.9651\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.1413 - accuracy: 0.9695\n",
       "Epoch 8/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0795 - accuracy: 0.9804\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0854 - accuracy: 0.9869\n",
       "Epoch 9/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0451 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0506 - accuracy: 0.9913\n",
       "Epoch 10/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0331 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0371 - accuracy: 0.9891\n",
       "Epoch 11/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0295 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0322 - accuracy: 0.9935\n",
       "Epoch 12/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0262 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0320 - accuracy: 0.9891\n",
       "Epoch 13/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0244 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0393 - accuracy: 0.9913\n",
       "Epoch 14/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0198 - accuracy: 0.9935\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0280 - accuracy: 0.9891\n",
       "Epoch 15/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0252 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0223 - accuracy: 0.9935\n",
       "Epoch 16/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0237 - accuracy: 0.9935\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0263 - accuracy: 0.9891\n",
       "Epoch 17/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0193 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0228 - accuracy: 0.9891\n",
       "Epoch 18/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0204 - accuracy: 0.9913\n",
-      "Epoch 19/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0229 - accuracy: 0.9891\n",
-      "Epoch 20/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0214 - accuracy: 0.9891\n",
-      "Epoch 21/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0172 - accuracy: 0.9869\n",
-      "Epoch 22/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0201 - accuracy: 0.9913\n",
-      "Epoch 23/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0213 - accuracy: 0.9891\n",
-      "Epoch 24/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0138 - accuracy: 0.9891\n",
-      "Epoch 25/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0168 - accuracy: 0.9913\n",
-      "Epoch 26/50\n",
-      "46/46 [==============================] - 0s 3ms/step - loss: 0.0201 - accuracy: 0.9891\n",
-      "Epoch 27/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0149 - accuracy: 0.9935\n",
-      "Epoch 28/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0152 - accuracy: 0.9935\n",
-      "Epoch 29/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0146 - accuracy: 0.9913\n",
-      "Epoch 30/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0200 - accuracy: 0.9869\n",
-      "Epoch 31/50\n",
       "46/46 [==============================] - 0s 2ms/step - loss: 0.0176 - accuracy: 0.9913\n",
+      "Epoch 19/50\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0154 - accuracy: 0.9935\n",
+      "Epoch 20/50\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0171 - accuracy: 0.9891\n",
+      "Epoch 21/50\n",
+      "46/46 [==============================] - 0s 4ms/step - loss: 0.0150 - accuracy: 0.9891\n",
+      "Epoch 22/50\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0204 - accuracy: 0.9913\n",
+      "Epoch 23/50\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0119 - accuracy: 0.9935\n",
+      "Epoch 24/50\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0177 - accuracy: 0.9935\n",
+      "Epoch 25/50\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0172 - accuracy: 0.9935\n",
+      "Epoch 26/50\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0217 - accuracy: 0.9891\n",
+      "Epoch 27/50\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0185 - accuracy: 0.9913\n",
+      "Epoch 28/50\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0170 - accuracy: 0.9913\n",
+      "Epoch 29/50\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0205 - accuracy: 0.9913\n",
+      "Epoch 30/50\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0159 - accuracy: 0.9891\n",
+      "Epoch 31/50\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0138 - accuracy: 0.9913\n",
       "Epoch 32/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0149 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0154 - accuracy: 0.9869\n",
       "Epoch 33/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0150 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0181 - accuracy: 0.9913\n",
       "Epoch 34/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0161 - accuracy: 0.9935\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0162 - accuracy: 0.9891\n",
       "Epoch 35/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0118 - accuracy: 0.9935\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0172 - accuracy: 0.9935\n",
       "Epoch 36/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0172 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0159 - accuracy: 0.9913\n",
       "Epoch 37/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0144 - accuracy: 0.9935\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0137 - accuracy: 0.9935\n",
       "Epoch 38/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0168 - accuracy: 0.9869\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0121 - accuracy: 0.9891\n",
       "Epoch 39/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0151 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0177 - accuracy: 0.9913\n",
       "Epoch 40/50\n",
-      "46/46 [==============================] - 0s 3ms/step - loss: 0.0153 - accuracy: 0.9869\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0150 - accuracy: 0.9891\n",
       "Epoch 41/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0144 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0134 - accuracy: 0.9913\n",
       "Epoch 42/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0127 - accuracy: 0.9935\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0139 - accuracy: 0.9891\n",
       "Epoch 43/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0135 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0157 - accuracy: 0.9869\n",
       "Epoch 44/50\n",
-      "46/46 [==============================] - 0s 3ms/step - loss: 0.0140 - accuracy: 0.9935\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0128 - accuracy: 0.9913\n",
       "Epoch 45/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0161 - accuracy: 0.9935\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0130 - accuracy: 0.9913\n",
       "Epoch 46/50\n",
-      "46/46 [==============================] - 0s 933us/step - loss: 0.0123 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0152 - accuracy: 0.9891\n",
       "Epoch 47/50\n",
-      "46/46 [==============================] - 0s 974us/step - loss: 0.0138 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0146 - accuracy: 0.9913\n",
       "Epoch 48/50\n",
-      "46/46 [==============================] - 0s 3ms/step - loss: 0.0128 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0123 - accuracy: 0.9891\n",
       "Epoch 49/50\n",
-      "46/46 [==============================] - 0s 959us/step - loss: 0.0122 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0159 - accuracy: 0.9891\n",
       "Epoch 50/50\n",
-      "46/46 [==============================] - 0s 956us/step - loss: 0.0132 - accuracy: 0.9913\n",
-      "4/4 [==============================] - 0s 3ms/step - loss: 2.2574 - accuracy: 0.6000\n",
-      "Precisión en el conjunto de prueba: 0.6000000238418579\n"
+      "46/46 [==============================] - 0s 2ms/step - loss: 0.0121 - accuracy: 0.9956\n",
+      "4/4 [==============================] - 0s 2ms/step - loss: 2.3557 - accuracy: 0.5826\n",
+      "Precisión en el conjunto de prueba: 0.582608699798584\n"
      ]
     }
    ],
@@ -149,7 +149,7 @@
     "from tensorflow.keras.layers import Dense\n",
     "\n",
     "# Carga los datos\n",
-    "data = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\partidos_limpio.csv')\n",
+    "data = pd.read_csv('../../data/partidos_limpio.csv')\n",
     "\n",
     "# Preparar las etiquetas binarias para los resultados de los partidos\n",
     "data['Winner'] = (data['Score'].apply(lambda x: int(x.split('-')[0]) > int(x.split('-')[1]))).astype(int)\n",
@@ -314,7 +314,7 @@
    ],
    "source": [
     "# Cargar y revisar el contenido del archivo actualizado para la temporada 2023-2024\n",
-    "updated_data_path = r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\partidos_2023-2024_limpio.csv'\n",
+    "updated_data_path ='../../data/partidos_2023-2024_limpio.csv'\n",
     "updated_data = pd.read_csv(updated_data_path)\n",
     "updated_data.head()"
    ]
@@ -442,22 +442,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_20716\\2519762111.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  features_upcoming['Referee'] = 'Unknown'\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 232ms/step\n",
+      "1/1 [==============================] - 0s 65ms/step\n",
       "             Home           Away Predicted Winner\n",
       "24  Bayern Munich    Real Madrid        Away Wins\n",
       "25       Dortmund      Paris S-G        Home Wins\n",
@@ -469,13 +457,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_20716\\2519762111.py:16: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_18472\\2519762111.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  features_upcoming['Referee'] = 'Unknown'\n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_18472\\2519762111.py:16: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  upcoming_matches['Predicted Winner'] = predicted_winners\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_20716\\2519762111.py:17: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_18472\\2519762111.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -516,7 +510,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 18ms/step\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
       "Predicted Final Winner:   Real Madrid\n"
      ]
     }
