--- a/UEFA/modelos/Aprendizaje supervisado/clasificacion.ipynb
+++ b/UEFA/modelos/Aprendizaje supervisado/clasificacion.ipynb
@@ -82,15 +82,15 @@
     "# Cargar los datos\n",
     "# rutas_datos: Diccionario con las rutas de los archivos de datos\n",
     "rutas_datos = {\n",
-    "    \"jugadores_df\": r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\jugadores_limpio.csv',\n",
-    "    \"overall_df\": r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\overall_limpio.csv'\n",
+    "    \"jugadores_df\": '../../data/jugadores_limpio.csv',\n",
+    "    \"overall_df\": '../../data/overall_limpio.csv'\n",
     "}\n",
     "\n",
     "jugadores_df = pd.read_csv(rutas_datos[\"jugadores_df\"])\n",
     "overall_df = pd.read_csv(rutas_datos[\"overall_df\"])\n",
     "\n",
-    "jugadores_df = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\jugadores_limpio.csv')\n",
-    "overall_df = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\overall_limpio.csv')\n",
+    "jugadores_df = pd.read_csv('../../data/jugadores_limpio.csv')\n",
+    "overall_df = pd.read_csv('../../data/overall_limpio.csv')\n",
     "\n",
     "# Visualizar las primeras filas de cada DataFrame para entender su estructura\n",
     "jugadores_df_head = jugadores_df.head()\n",
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1059,7 @@
        "28          Antwerp        2.491659e-07"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,18 +1118,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cargar los datos de equipos y jugadores\n",
-    "overall_df = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\overall_limpio.csv') \n",
-    "jugadores_df = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\jugadores_limpio.csv')"
+    "overall_df = pd.read_csv('../../data/overall_limpio.csv') \n",
+    "jugadores_df = pd.read_csv('../../data/jugadores_limpio.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1182,7 @@
        "RandomForestClassifier(random_state=42)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1248,7 @@
        "RandomForestClassifier(random_state=42)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1292,18 +1292,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Preparar los datos de la temporada 2023-2024 para predicción\n",
-    "equipo_2023_2024_df = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\equipo_2023-2024_limpio.csv')  \n",
+    "equipo_2023_2024_df = pd.read_csv('../../data/equipo_2023-2024_limpio.csv')  \n",
     "X_pred = equipo_2023_2024_df[features_team_only]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_35100\\3788676148.py:31: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_3408\\1951426963.py:31: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1399,7 +1399,7 @@
     "from sklearn.metrics import accuracy_score, roc_auc_score\n",
     "\n",
     "# Cargar y preparar datos históricos\n",
-    "data_path = r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\overall_limpio.csv'\n",
+    "data_path = '../../data/overall_limpio.csv'\n",
     "overall_data = pd.read_csv(data_path)\n",
     "features = ['W', 'D', 'L', 'GF', 'GA', 'GD', 'Pts']\n",
     "\n",
@@ -1416,7 +1416,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# Cargar datos de la temporada actual 2023-2024\n",
-    "new_season_data_path = r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\equipo_2023-2024_limpio.csv'\n",
+    "new_season_data_path = '../../data/equipo_2023-2024_limpio.csv'\n",
     "season_2023_2024_data = pd.read_csv(new_season_data_path)\n",
     "semifinals_teams = season_2023_2024_data[season_2023_2024_data['Rk'] == 'SF']\n",
     "semifinals_features = semifinals_teams[features]\n",
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1530,7 +1530,7 @@
        "6       D    0.057901"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
