--- a/UEFA/modelos/Aprendizaje supervisado/regresion_lineal.ipynb
+++ b/UEFA/modelos/Aprendizaje supervisado/regresion_lineal.ipynb
@@ -199,7 +199,7 @@
     "import pandas as pd\n",
     "\n",
     "# Cargar los datos históricos\n",
-    "overall_df = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\overall_limpio.csv')\n",
+    "overall_df = pd.read_csv('../../data/overall_limpio.csv')\n",
     "\n",
     "# Visualizar las primeras filas de cada DataFrame para entender su estructura\n",
     "overall_df_head = overall_df.head()\n",
@@ -395,7 +395,7 @@
    ],
    "source": [
     "# Cargar y preparar los datos de la temporada actual\n",
-    "current_season_df = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\equipo_2023-2024_limpio.csv')\n",
+    "current_season_df = pd.read_csv('../../data/equipo_2023-2024_limpio.csv')\n",
     "X_current_season = current_season_df[['GF', 'GA', 'GD']]\n",
     "\n",
     "# Predecir los puntos para la temporada actual\n",
