--- a/UEFA/modelos/Aprendizaje no supervisado/series_temporales.ipynb
+++ b/UEFA/modelos/Aprendizaje no supervisado/series_temporales.ipynb
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\albab\\anaconda3\\Lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
+      "  from pandas.core import (\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
@@ -28,8 +37,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Cargar los datos\n",
-    "data_path_1 = r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\partidos_limpio.csv'\n",
-    "data_path_2 = r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\partidos_2023-2024_limpio.csv'\n",
+    "data_path_1 = '../../data/partidos_limpio.csv'\n",
+    "data_path_2 = '../../data/partidos_2023-2024_limpio.csv'\n",
     "data_1 = pd.read_csv(data_path_1)\n",
     "data_2 = pd.read_csv(data_path_2)\n",
     "\n",
@@ -55,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +76,7 @@
        "GradientBoostingRegressor(random_state=42)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -117,37 +126,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_14928\\3556590829.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_19164\\3556590829.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  test_data['PredictedHomeGoals_RF'] = rf_home.predict(X_test)\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_14928\\3556590829.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_19164\\3556590829.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  test_data['PredictedAwayGoals_RF'] = rf_away.predict(X_test)\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_14928\\3556590829.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_19164\\3556590829.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  test_data['PredictedHomeGoals_GB'] = gb_home.predict(X_test)\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_14928\\3556590829.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_19164\\3556590829.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  test_data['PredictedAwayGoals_GB'] = gb_away.predict(X_test)\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_14928\\3556590829.py:12: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_19164\\3556590829.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  test_data['Winner_RF'] = test_data.apply(lambda row: row['Home'] if row['PredictedHomeGoals_RF'] > row['PredictedAwayGoals_RF'] else (row['Away'] if row['PredictedHomeGoals_RF'] < row['PredictedAwayGoals_RF'] else 'Draw'), axis=1)\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_14928\\3556590829.py:13: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_19164\\3556590829.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -177,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +233,7 @@
        "LabelEncoder()"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
