--- a/UEFA/modelos/Aprendizaje por refuerzo/cadenas_markov.ipynb
+++ b/UEFA/modelos/Aprendizaje por refuerzo/cadenas_markov.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "4                 Anfield   István Kovács  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
     "import pandas as pd\n",
     "\n",
     "# Cargar el archivo CSV para revisar su contenido\n",
-    "data_path = r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\partidos_limpio.csv'\n",
+    "data_path = '../../data/partidos_limpio.csv'\n",
     "data = pd.read_csv(data_path)\n",
     "\n",
     "# Mostrar las primeras filas del dataframe\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "4    Liverpool    Real Madrid           2           5       2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "       [0.24096386, 0.42771084, 0.3313253 ]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -485,14 +485,14 @@
        "4         Dortmund   Philips Stadion    Srđan Jovanović  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Cargar el archivo CSV de la temporada 2023-2024 para revisar su contenido\n",
-    "data_path_new = r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\partidos_2023-2024_limpio.csv'\n",
+    "data_path_new = '../../data/partidos_2023-2024_limpio.csv'\n",
     "data_new = pd.read_csv(data_path_new)\n",
     "\n",
     "# Mostrar las primeras filas del nuevo dataframe limpio\n",
@@ -501,26 +501,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_36436\\3069635747.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_2560\\3069635747.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  played_data['Home_goals'] = played_data['Score'].str.extract('(\\d+)-')[0].astype(int)\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_36436\\3069635747.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_2560\\3069635747.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  played_data['Away_goals'] = played_data['Score'].str.extract('-(\\d+)')[0].astype(int)\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_36436\\3069635747.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_2560\\3069635747.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -563,7 +563,7 @@
        " 27    Real Madrid  Bayern Munich)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,14 +595,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_36436\\3776462162.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_2560\\3776462162.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -647,7 +647,7 @@
        "      <th>25</th>\n",
        "      <td>Dortmund</td>\n",
        "      <td>Paris S-G</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
@@ -659,7 +659,7 @@
        "      <th>27</th>\n",
        "      <td>Real Madrid</td>\n",
        "      <td>Bayern Munich</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -668,12 +668,12 @@
       "text/plain": [
        "             Home           Away  Simulated_Result\n",
        "24  Bayern Munich    Real Madrid                 1\n",
-       "25       Dortmund      Paris S-G                 2\n",
+       "25       Dortmund      Paris S-G                 1\n",
        "26      Paris S-G       Dortmund                 1\n",
-       "27    Real Madrid  Bayern Munich                 1"
+       "27    Real Madrid  Bayern Munich                 2"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,19 +708,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array(['Bayern Munich', 'Paris S-G', 'Paris S-G', 'Real Madrid'],\n",
+       "(array(['Bayern Munich', 'Dortmund', 'Paris S-G', 'Bayern Munich'],\n",
        "       dtype=object),\n",
-       " [1, 1],\n",
+       " [1, 2],\n",
        " 'Final Winner: Home')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
        "'Dortmund'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
