corregimos una ruta que se nos olvido cambiar

--- a/UEFA/modelos/Aprendizaje supervisado/clasificacion.ipynb
+++ b/UEFA/modelos/Aprendizaje supervisado/clasificacion.ipynb
@@ -418,7 +418,7 @@
    ],
    "source": [
     "# Cargar los datos de los equipos para la temporada actual\n",
-    "equipo_2023_2024_df = pd.read_csv(r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\equipo_2023-2024_limpio.csv')\n",
+    "equipo_2023_2024_df = pd.read_csv('../../data/equipo_2023-2024_limpio.csv')\n",
     "\n",
     "# Visualizar las primeras filas para verificar la estructura de los datos\n",
     "equipo_2023_2024_df.head()"
